# 2024-Oksanich-DNLI

./: dataset_partitioning_tokenization.ipynb  fl_runner.ipynb  manual_fl_iid.ipynb  manual_fl_non_iid.ipynb  metrics_comp.ipynb  metrics_comp_iid_niid.ipynb  model.ipynb  pyproject.toml  requirements.txt  results_fedavgcustom.json  runner.ipynb  test.ipynb  test_transf.ipynb  tutorial.ipynb
model/: baseline_results.json  training_time_seconds.json
model/dirichlet/: dirich_fedavg_r0.json  dirich_fedavg_r1.json  dirich_fedavg_r2.json  dirich_fedavg_r3.json  dirich_fedavg_r4.json  dirich_fedavg_r5.json  dirich_fedavg_r6.json  dirich_fedavg_r7.json  dirich_partition_c0_r0.json  dirich_partition_c0_r1.json  dirich_partition_c0_r2.json  dirich_partition_c0_r3.json  dirich_partition_c0_r4.json  dirich_partition_c0_r5.json  dirich_partition_c0_r6.json  dirich_partition_c0_r7.json  dirich_partition_c1_r0.json  dirich_partition_c1_r1.json  dirich_partition_c1_r2.json  dirich_partition_c1_r3.json  dirich_partition_c1_r4.json  dirich_partition_c1_r5.json  dirich_partition_c1_r6.json  dirich_partition_c1_r7.json  dirich_partition_c2_r0.json  dirich_partition_c2_r1.json  dirich_partition_c2_r2.json  dirich_partition_c2_r3.json  dirich_partition_c2_r4.json  dirich_partition_c2_r5.json  dirich_partition_c2_r6.json  dirich_partition_c2_r7.json  dirich_partition_c3_r0.json  dirich_partition_c3_r1.json  (+6 more)
pytorchexample/: task.py
sentiment-analysis/: model.ipynb  test.ipynb
sentiment_analysis/: __init__.py  client_app.py  model.ipynb  server_app.py  strategy.py  task.py
(+41 files in other folders)
